--- a/static/css/starter-client.css
+++ b/static/css/starter-client.css
@@ -198,39 +198,58 @@ main {
     letter-spacing: 0px;
 }
 
-.suggestions section {
-    display: grid;
-    grid-template-columns: 35px 2fr 1fr;
+#suggestions {
+    width: 350px;
+    background-color: #f2f2f2;
+    padding: 5px;
+}
+
+.suggestion{
+    display:grid;
+    grid-template-columns: 50px auto 70px;
     align-items: center;
-    width: 25vw;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
-.suggestions section > div {
-    padding: 8px;
-    width: 200px;
+
+main{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
-.suggestions section p, .suggestions section a {
-    margin: 0px;
+
+.suggestion p{
+    margin: 0;
 }
-.suggestions section p {
-    color: #333;
-    font-weight: 600;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-.suggestions section a {
-    font-size: 0.8em;
-}
-.suggestions section p:nth-child(2) {
-    color: #666;
-    font-size: 0.8em;
-    font-weight: 400;
-}
-.suggestions section .pic {
-    min-width: 30px;
-    min-height: 30px;
-    border: solid 1px #dbdbdb;
+
+.suggestion img{
     border-radius: 15px;
 }
+
+.suggestion .username {
+    font-weight: bold;
+}
+
+.suggestion .sugg-text{
+    font-size: 0.9em;
+    color: #555;
+}
+
+.suggestion button{
+    padding: 5px 10px;
+    border: 1px;
+    border-radius: 4px;
+    border-color: #999;
+}
+.follow {
+    background: transparent;
+    color: steelblue;
+}
+
+.unfollow{
+    background: white;
+}
+
 aside header {
     display: flex;
     align-items: center;
@@ -268,3 +287,213 @@ aside header .pic {
         width: 90vw;
     }
 }
+
+.pic {
+    border-radius: 15px;
+}
+
+.username{
+    font-family: 'Comfortaa', cursive;
+    font-weight: 700;
+}
+
+.post{
+    width: 760px;
+    background-color: white;
+    border: solid grey 1px;
+    box-shadow: grey;
+    margin-top: 10px;
+}
+
+.post > img {
+    width: 100%
+}
+
+.topPost > h3{
+    font-family: 'Comfortaa', cursive;
+    font-weight: 500;
+    font-size: 30px;
+    position: relative;
+    float: left;
+    left: -120px;
+}
+
+.topPost{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.topPost > i {
+    position: relative;
+    float: right;
+    right: -100px;
+}
+
+i {
+    font-size: 40px;
+}
+
+.rightIcons > button {
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 15px;
+    position: relative;
+    float: left;
+    left: -130px;
+    border: none;
+    background: none;
+}
+
+.iconBar > button {
+    position: relative;
+    float: right;
+    right: -120px;
+    padding-top: 15px;
+    border: none;
+    background: none;
+}
+
+.iconBar {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.likesContainer > p {
+    font-weight: bold;
+    font-size: 20px;
+    padding-left: 20px;
+}
+
+.caption {
+    padding-left: 20px;
+    font-size: 20px;
+}
+
+.caption > p {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin-bottom: 0px;
+}
+
+.caption > a {
+    margin-top: -10px;
+    text-decoration: none;
+    color: steelblue;
+}
+
+.comments {
+    padding-left: 20px;
+    font-size: 20px;
+}
+
+.commentsNStuff > p {
+    color: grey;
+    font-weight: bold;
+    padding-left: 20px;
+}
+
+.addComment{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 20px;
+    font-weight: bold;
+    border: solid gray 1px;
+}
+
+.addComment > input {
+    color: steelblue;
+    position: relative;
+    float: right;
+    right: -15px;
+    border: none;
+    background: none;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.interact {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    position: relative;
+    float: left;
+    left: -30px;
+}
+
+.interact > input {
+    border: none;
+    height: 40px;
+    font-size: 20px;
+    width: 500px;
+}
+
+.interact > input:focus {
+    outline: none;
+}
+
+.comments > a {
+    text-decoration: none;
+    color: steelblue;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.8); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 5% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+    height:80%;
+  }
+
+  .modal-post-content > .modal-img > img {
+    width: 50vw;
+    height: 78.5vh;
+    position: relative;
+    left: -21px;
+    top:-21px;
+  }
+
+  .modal-post-user > img {
+      width:80px;
+      height:80px;
+      border-radius: 40px;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: white;
+    position: relative;
+    top:-100px;
+    right: -75px;
+    float: right;
+    font-size: 80px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
