--- a/templates/starter-client.html
+++ b/templates/starter-client.html
@@ -11,7 +11,12 @@
 </head>
 <body>
     <!-- Nav Bar still rendered via server-side template -->
-    {% include 'includes/navbar.html'  %}
+    <nav class="main-nav">
+        <h1>Photo App</h1>
+        <ul class="user-info">
+
+        </ul>
+    </nav>
 
     <aside>
         <header>
@@ -21,7 +26,10 @@
             <p class="suggestion-text">Suggestions for you</p>
             <div>
                 <!-- Suggestions rendered client-side -->
-                <p>TBD</p>
+                <section id="suggestions">
+                    <!----JS code populate this-->
+                    
+                </section>
             </div>
         </div>
     </aside>
@@ -34,11 +42,30 @@
 
         <!-- Posts -->
         <div id="posts">
-            <!-- Posts rendered client-side -->
-            <p>TBD</p>
+
         </div>
 
     </main>
 
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+
+    <!-- Modal content -->
+    <div class="modal-content" id="modal-content">
+        <span class="close">&times;</span>
+        <div class = "modal-post-content" id="modal-post-content">
+
+        </div>
+    </div>
+
+    </div>
+
 </body>
 </html>
+
+<!--Accessibility Reflection
+
+    1. The resource I consulted was the lecture video where we did lab6.
+    2. -There was not a lot of additional work. Just changing things to buttons and adding aria stuff
+        - The most challenging part was remembering to actually add the aria tags and labels
+        - Yes, because it gives multiple options for interaction. For example, one time I broke my mouse, but I was able to navigate web pages using tab-->
