--- a/templates/login.html
+++ b/templates/login.html
@@ -53,8 +53,15 @@
         {% if message %}
             <div class="error">{{ message }}</div>
         {% endif %}
-        
-        YOUR FORM HERE
+        <div>
+            <label for="username">Username</label>
+            <input name="username" type="text" value="" id="username" placeholder="username"> 
+        </div>
+        <div>
+            <label for="password">Password</label>  
+            <input name="password" type="password" value="" id="password" placeholder="password"><br>
+        </div>
+        <button type="submit">Login</button>
     </form> 
 </body>
 </html>
