--- a/templates/starter-client.html
+++ b/templates/starter-client.html
@@ -11,16 +11,11 @@
 </head>
 <body>
     <!-- Nav Bar still rendered via server-side template -->
-    <nav class="main-nav">
-        <h1>Photo App</h1>
-        <ul class="user-info">
-
-        </ul>
-    </nav>
-
+    {% include 'includes/navbar.html' %}
     <aside>
         <header>
             <!-- user profile rendered client-side -->
+            
         </header>
         <div class="suggestions">
             <p class="suggestion-text">Suggestions for you</p>
